\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.2-12}{
  \itemize{
    \item Avoid a downstream error from infinte coefficients in
    coxph.  In special case it would fail by passing an NA to C code.
    \item The df column from cox.zph could be incorrect for a coxme
    model
    \item cox.zph would crash for a coxme model whose random effect
    contained a factor (odd issue with model.frame).
    \item yates error for a coxph model with a strata * covariate
    interaction
    \item Clarify documentation for the royston command.
    \item Add error for survexp applied to a multistate model.
    \item Make the labeling of restricted mean consistent in print and
    summary, for single state and multistate survfit.
}}
\section{Changes in version 3.2-11}{
  \itemize{
    \item Missing labels for the "pairwise" option in yates(), fixed.
    \item Bug in plot.survfit -- could not use conf.int=T and xmax in
    the same call.  Pointed out by Dirk Larson.
    \item Failure of survfit, when applied to a multi-state coxph model with
    strata().  Repaired and added this as a test case.
    \item Change seq(along=  to seq(along.with=, to match the complete
    argument name.
    \item In pyears(...,data.frame=TRUE), if the levels of a tcut are
    numeric return a numeric rather than a factor.  (Version 2.4 feature
    that had been inadvertently removed.)
    \item Fix mistake in survfit.coxphms(..., stype=1): had pmin when I
    meant pmax.  (Resulting curves were not even close.)  Add a test
    case.
    \item update anova.survreg to have class("anova", "data.table").
    Error pointed out by Daniel Sjoberg.
}}

\section{Changes in version 3.2-10}{
  \itemize{
    \item CRAN valgrind checks discovered an uninitialized vector in
    one of the C routines.  Now fixed.  Updated version is now on CRAN.
}}

\section{Changes in version 3.2-9}{
  \itemize{
    \item More careful tests of the rttright function.