@@ -48,6 +48,8 @@ values of $D(d,n)$ computed so far, and the the first dimension of the array.
 The intial condition $D(0,n)=1$ is important to all three routines.
 
 <<excox-recur>>=
+#define NOTDONE -1.1
+
 double coxd0(int d, int n, double *score, double *dmat,
              int dmax) {
     double *dn;
@@ -55,9 +57,9 @@ double coxd0(int d, int n, double *score, double *dmat,
     if (d==0) return(1.0);
     dn = dmat + (n-1)*dmax + d -1;  /* pointer to dmat[d,n] */
 
-    if (*dn ==0) {  /* still to be computed */
+    if (*dn == NOTDONE) {  /* still to be computed */
         *dn = score[n-1]* coxd0(d-1, n-1, score, dmat, dmax);
-    	if (d<n) *dn += coxd0(d, n-1, score, dmat, dmax);
+        if (d<n) *dn += coxd0(d, n-1, score, dmat, dmax);
     }
     return(*dn);
 }
@@ -70,11 +72,21 @@ The second derivative calculation is per pair of variables; the
 \texttt{d1j} and \texttt{d1k} arrays are the appropriate first derivative
 arrays of saved values.
 It is possible for the first derivative to be exactly 0 (if all values
-of the covariate are 0 for instance) in which case we may recalculate the
+of the covariate are identical for instance) in which case we may recalculate the
 derivative for a particular (d,n) case multiple times unnecessarily, 
 since we are using value=0 as a marker for
 ``not yet computed''.           
-This case is essentially nonexistent in real data, however.
+This case is essentially nonexistent in real data, however. 
+
+Later update: User feedback about an "infinite computation" proved that the
+case most definitely does exist: in one strata their first 65 rows had x=0 for
+one of the variables.  Not actually infinite compute time, but close enough.
+One solution is to pick a value that will never occur as the first derivative.
+That is impossible, but actually anything other than 0 should never be the 
+first derivative for more than a single (d,n) combination.
+We use a negative
+number for the constant NOTDONE since d0 must be positive, and thus no
+issues arise there.
 
 <<excox-recur>>=
 double coxd1(int d, int n, double *score, double *dmat, double *d1,
@@ -82,7 +94,7 @@ double coxd1(int d, int n, double *score, double *dmat, double *d1,
     int indx;
     
     indx = (n-1)*dmax + d -1;  /*index to the current array member d1[d.n]*/
-    if (d1[indx] ==0) { /* still to be computed */
+    if (d1[indx] == NOTDONE) { /* still to be computed */
 	d1[indx] = score[n-1]* covar[n-1]* coxd0(d-1, n-1, score, dmat, dmax);
 	if (d<n) d1[indx] += coxd1(d, n-1, score, dmat, d1, covar, dmax);
 	if (d>1) d1[indx] += score[n-1]*
@@ -97,7 +109,7 @@ double coxd2(int d, int n, double *score, double *dmat, double *d1j,
     int indx;
     
     indx = (n-1)*dmax + d -1;  /*index to the current array member d1[d,n]*/
-    if (d2[indx] ==0) { /*still to be computed */
+    if (d2[indx] == NOTDONE) { /*still to be computed */
 	d2[indx] = coxd0(d-1, n-1, score, dmat, dmax)*score[n-1] *
 	    covarj[n-1]* covark[n-1];
 	if (d<n) d2[indx] += coxd2(d, n-1, score, dmat, d1j, d1k, d2, covarj, 
@@ -222,7 +234,7 @@ values of $D(d,n)$ in an array since they will be used in the
 derivative calculation.  Likewise, the first derivatives are used
 in calculating the second.
 Even more importantly, say we have a large data set.  It will
-be sorted with the longest times first.
+be sorted with the shortest times first.
 If there is a death with 30 at risk and another with 40 at
 risk, the intermediate sums we computed for the n=30 case
 are part of the computation for n=40.  To make this
@@ -242,7 +254,8 @@ strata[0] =1;  /* in case the parent forgot (e.g., no strata case)*/
 temp = 0;      /* temp variable for dsize */
 
 maxdeath =0;
-j=0;   /* start of the strata */
+j=0;   /* first obs of current stratum */
+ndeath=0; nrisk=0;
 for (i=0; i<nused;) {
     if (strata[i]==1) { /* first obs of a new strata */
        if (i>0) {
@@ -262,7 +275,7 @@ for (i=0; i<nused;) {
 	nrisk++;
 	ndeath += status[i];
 	i++;
-	if (i>=nused || strata[i] >0) break;  /*tied deaths don't cross strata */
+	if (i>=nused || strata[i] >0) break;  /* don't cross strata */
     }
     if (ndeath > maxdeath) maxdeath = ndeath;
 }
@@ -308,7 +321,7 @@ for (i=0; i<nused; ) {
     if (strata[i] >0) { /* first obs of a new strata */
         maxdeath= strata[i];
         dtemp = dmem0;
-        for (j=0; j<dmemtot; j++) *dtemp++ =0.0;
+        for (j=0; j<dmemtot; j++) *dtemp++ = NOTDONE;
 	sstart =i;
 	nrisk =0;
     }
